# handler/encryption_handler.go
@@ -5,8 +5,11 @@ import (
 	"encoding/pem"
 	"fmt"
 	"io"
+	"io/ioutil"
+	"net/http"
 	"os"
 	"path/filepath"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 	"github.com/google/go-tpm/legacy/tpm2"
@@ -247,24 +250,122 @@ func UploadEncryptedFile(ctx *gin.Context) {
 
 // @BasePath /
 // @Summary Decrypt file
-// @Description Decrypt a file
+// @Description Search for a file to decrypt
 // @Tags Encryption
 // @Accept multipart/form-data
 // @Produce json
-// @Param file formData file true "File"
+// @Param filename query string true "Filename"
 // @Success 200 {string} string "file_decrypted"
 // @Failure 400 {string} string "bad_request"
 // @Failure 500 {string} string "internal_server_error"
 // @Router /encryption/decrypt_file [post]
 func DecryptFile(ctx *gin.Context) {
+	filename := ctx.Query("filename")
+	url := "http://localhost:5000/encryption/search_file"
+
+	err := sendString(filename, url)
+	if err != nil {
+		response(ctx, http.StatusInternalServerError, "Error sending filename", err)
+		return
+	}
+
+	// Exemplo de retorno de sucesso
+	response(ctx, http.StatusOK, "String sent successfully", nil)
+}
+
+// @BasePath /
+// @Summary Save file
+// @Description Save file
+// @Tags Encryption
+// @Accept multipart/form-data
+// @Produce json
+// @Param file formData file true "File"
+// @Success 200 {string} string "file_saved"
+// @Failure 400 {string} string "bad_request"
+// @Failure 404 {string} string "not_found"
+// @Failure 500 {string} string "internal_server_error"
+// @Router /encryption/save_file [post]
+func SaveFile(ctx *gin.Context) {
 	ctx.Request.ParseMultipartForm(10 << 20)
 
 	file, err := ctx.FormFile("arquivo")
 	if err != nil {
 		response(ctx, 400, "bad_request", err)
-		return
 	}
-	fmt.Println(file.Filename)
+
+	//Abra o arquivo diretamente sem salvá-lo no disco
+	uploadedFile, err := file.Open()
+	if err != nil {
+		response(ctx, 500, "internal_server_error", err)
+	}
+	defer uploadedFile.Close()
+
+	data, err := ioutil.ReadAll(uploadedFile)
+	if err != nil {
+		response(ctx, 500, "internal_server_error", err)
+	}
+
+	// Split data into smaller blocks
+	maxBlockSize := 245
+	var encryptedBlocks []byte
+	for len(data) > 0 {
+		blockSize := len(data)
+		if blockSize > maxBlockSize {
+			blockSize = maxBlockSize
+		}
+
+		//Writes the file in blocks of bytes
+		encryptedBlock := data[:blockSize]
+
+		encryptedBlocks = append(encryptedBlocks, encryptedBlock...)
+		data = data[blockSize:]
+	}
+
+	tempDir := "./server_files"
+	err = os.MkdirAll(tempDir, os.ModePerm)
+	if err != nil {
+		response(ctx, 500, "internal_server_error", err)
+	}
+
+	tempfile, err := os.Create(tempDir + "/" + file.Filename)
+	if err != nil {
+		response(ctx, 500, "internal_server_error", err)
+	}
+
+	defer tempfile.Close()
+
+	err = ioutil.WriteFile(tempfile.Name(), encryptedBlocks, 0644)
+	if err != nil {
+		response(ctx, 500, "internal_server_error", err)
+	}
+
+	response(ctx, 200, "file_saved", err)
+}
+
+// @BasePath /
+// @Summary Get size and decrypt
+// @Description Get size and decrypt
+// @Tags Encryption
+// @Accept json
+// @Produce json
+// @Param request body StringData true "Request body"
+// @Success 200 {object} string "file_decrypted"
+// @Failure 400 {string} string "bad_request"
+// @Failure 404 {string} string "not_found"
+// @Failure 500 {string} string "internal_server_error"
+// @Router /encryption/size_and_decrypt [post]
+func SizeAndDecrypt(ctx *gin.Context) {
+	request := StringData{}
+	ctx.BindJSON(&request)
+
+	size := StringData{
+		Data: request.Data,
+	}
+
+	fmt.Println("aquiiii tamanho", size.Data)
+	sizeInt, _ := strconv.Atoi(size.Data)
+	rest := sizeInt % 258
+	total := sizeInt / 258
 
 	// Open the TPM device.
 	tpmDevice := "/dev/tpmrm0"
@@ -286,7 +387,7 @@ func DecryptFile(ctx *gin.Context) {
 			ModulusRaw: make([]byte, 256),
 		},
 	}
-
+	fmt.Println("tst2")
 	// Creates the primary key in the TPM.
 	keyHandle, _, err := tpm2.CreatePrimary(tpm, tpm2.HandleOwner, tpm2.PCRSelection{}, "", "", keyTemplate)
 	if err != nil {
@@ -302,64 +403,118 @@ func DecryptFile(ctx *gin.Context) {
 		return
 	}
 	fmt.Println("tst3")
-	encryptedFile, err := file.Open()
+	serverFilesDir := "./server_files"
+
+	err = filepath.Walk(serverFilesDir, func(path string, info os.FileInfo, err error) error {
+		if err != nil {
+			return err
+		}
+
+		if info.IsDir() {
+			return nil
+		}
+
+		encryptedFile, err := os.Open(path)
+		if err != nil {
+			return err
+		}
+		defer encryptedFile.Close()
+
+		decryptedFilePath := tempDir + "/" + info.Name()
+		decryptedFile, err := os.Create(decryptedFilePath)
+		if err != nil {
+			return err
+		}
+		defer decryptedFile.Close()
+
+		buffer := make([]byte, 256)
+
+		if rest != 0 {
+			for i := 0; i < total; i++ {
+				n, err := io.ReadFull(encryptedFile, buffer)
+				if err == io.EOF || err == io.ErrUnexpectedEOF {
+					break
+				}
+				if err != nil {
+					response(ctx, 500, "internal_server_error", nil)
+					return nil
+				}
+
+				// Decrypt block
+				decData, err := tpm2.RSADecrypt(tpm, keyHandle, "", buffer[:n], nil, "")
+				if err != nil {
+					response(ctx, 500, "internal_server_error", nil)
+					return err
+				}
+
+				_, err = decryptedFile.Write(decData[11:])
+				if err != nil {
+					response(ctx, 500, "internal_server_error", nil)
+					return err
+				}
+			}
+
+			n, err := io.ReadFull(encryptedFile, buffer)
+			if err == io.EOF || err == io.ErrUnexpectedEOF {
+				return nil
+			}
+			if err != nil {
+				response(ctx, 500, "internal_server_error", nil)
+				return err
+			}
+
+			// Decrypt block
+			decData, err := tpm2.RSADecrypt(tpm, keyHandle, "", buffer[:n], nil, "")
+			if err != nil {
+				response(ctx, 500, "internal_server_error", nil)
+				return err
+			}
+
+			_, err = decryptedFile.Write(decData[256-rest:])
+			if err != nil {
+				response(ctx, 500, "internal_server_error", nil)
+				return err
+			}
+		} else {
+			for {
+				n, err := io.ReadFull(encryptedFile, buffer)
+				if err == io.EOF || err == io.ErrUnexpectedEOF {
+					break
+				}
+				if err != nil {
+					response(ctx, 500, "internal_server_error", nil)
+					return err
+				}
+
+				// Decrypt block
+				decData, err := tpm2.RSADecrypt(tpm, keyHandle, "", buffer[:n], nil, "")
+				if err != nil {
+					response(ctx, 500, "internal_server_error", nil)
+					return err
+				}
+
+				_, err = decryptedFile.Write(decData[11:])
+				if err != nil {
+					response(ctx, 500, "internal_server_error", nil)
+					return err
+				}
+			}
+		}
+		return nil
+	})
 	if err != nil {
 		response(ctx, 500, "internal_server_error", nil)
 		return
 	}
-	defer encryptedFile.Close()
-
-	decryptedFile, err := os.Create(tempDir + "/" + file.Filename)
-	if err != nil {
-		response(ctx, 500, "internal_server_error", nil)
-		return
-	}
-	defer decryptedFile.Close()
-	buffer := make([]byte, 256)
-
-	for {
-		n, err := io.ReadFull(encryptedFile, buffer)
-		if err == io.EOF || err == io.ErrUnexpectedEOF {
-			break
-		}
-		if err != nil {
-			response(ctx, 500, "internal_server_error", nil)
-			return
-		}
-
-		// Decrypt block
-		decData, err := tpm2.RSADecrypt(tpm, keyHandle, "", buffer[:n], nil, "")
-		if err != nil {
-			response(ctx, 500, "internal_server_error", nil)
-			return
-		}
-
-		_, err = decryptedFile.Write(decData[11:])
-		if err != nil {
-			response(ctx, 500, "internal_server_error", nil)
-			return
-		}
-	}
-
-	token, err := Auth()
-	if err != nil {
-		response(ctx, 500, "internal_server_error", nil)
-		return
-	}
-
-	url := "http://localhost:5000/file/upload_encrypted_file"
-
-	if err := sendFile(decryptedFile.Name(), token, url); err != nil {
-		response(ctx, 500, "file_not_sent_to_server", nil)
-		return
-	}
-	response(ctx, 200, "file_decrypted", nil)
+	os.RemoveAll(serverFilesDir)
 }
+
+/*
 
 // @BasePath /
 // @Summary Decrypt a file
 // @Description Decrypt a file stored in server
-// @Tags File
+// @Tags Encryption
 // @Produce json
 // @Param file formData file true "File"
 // @Success 200 {string} string "file_decrypted"
@@ -418,3 +573,4 @@ func DecryptServerFile(ctx *gin.Context) {
 
 	response(ctx, 200, "file_decrypted", nil)
 }
+*/
